Quiz preview- missing color  (bug 2375)

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Quiz.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Quiz.less
@@ -476,7 +476,6 @@ body {
     font-size: 22px;
     width: 800px;
     margin: 100px auto 20px;
-    color: #fff;
     &:before
     {
         content: attr(data-questioncount) "\00a0";
